resiliency/sidecar/sidecar-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/airports"
                route:
                  cluster: service_cluster
                  timeout: 5s
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: service_cluster
    connect_timeout: 2s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: service
        port_value: 8080
    health_checks:
        - timeout: 1s
          interval: 60s
          interval_jitter: 1s
          unhealthy_threshold: 3
          healthy_threshold: 3
          http_health_check:
            host: service
            path: "/health"
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
